--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
         .parallax-container {
             height: 30vh;
         }
-
-
     </style>
 
     <!-- Coneectando ao js do rellax js -->
@@ -45,17 +43,19 @@
                     <ul class="right hide-on-med-and-down">
                         <li>
                             <a href="#about-me" class="waves-effect waves-light">About
-                                    <i style="font-size:30px" class="fa fa-user"></i>
+                                <i style="font-size:30px" class="fa fa-user"></i>
 
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.linkedin.com/in/lucas-manoel-67bb8314b/" target="_blank" class="waves-effect waves-light">LinkedIn <i style="font-size:30px" class="fab fa-linkedin"></i>
+                            <a href="https://www.linkedin.com/in/lucas-manoel-67bb8314b/" target="_blank" class="waves-effect waves-light">LinkedIn
+                                <i style="font-size:30px" class="fab fa-linkedin"></i>
                                 <span class="ion-social-linkedin"></span>
                             </a>
                         </li>
                         <li>
-                            <a href="https://github.com/lucaslmmanoel" target="_blank" class="waves-effect waves-light">GitHub <i style="font-size:30px" class="fab fa-github"></i>
+                            <a href="https://github.com/lucaslmmanoel" target="_blank" class="waves-effect waves-light">GitHub
+                                <i style="font-size:30px" class="fab fa-github"></i>
                                 <span class="ion-social-github"></span>
                             </a>
                         </li>
@@ -94,18 +94,21 @@
             </div>
         </li>
         <li>
-            <a href="#about-me" class="waves-effect waves-light">About <i style="font-size:30px" class="fa fa-user"></i>
+            <a href="#about-me" class="waves-effect waves-light">About
+                <i style="font-size:30px" class="fa fa-user"></i>
 
             </a>
         </li>
 
         <li>
-            <a href="https://www.linkedin.com/in/lucas-manoel-67bb8314b/" target="_blank" class="waves-effect waves-light">LinkedIn <i style="font-size:30px" class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/lucas-manoel-67bb8314b/" target="_blank" class="waves-effect waves-light">LinkedIn
+                <i style="font-size:30px" class="fab fa-linkedin"></i>
                 <span class="ion-social-linkedin"></span>
             </a>
         </li>
         <li>
-            <a href="https://github.com/lucaslmmanoel" target="_blank" class="waves-effect waves-light">GitHub <i style="font-size:30px" class="fab fa-github"></i>
+            <a href="https://github.com/lucaslmmanoel" target="_blank" class="waves-effect waves-light">GitHub
+                <i style="font-size:30px" class="fab fa-github"></i>
                 <span class="ion-social-github"></span>
             </a>
         </li>
@@ -114,7 +117,7 @@
     <!-- End navbar -->
     <div class="parallax-container" style="margin-top: 0%">
         <div class="parallax">
-            <img class="responsive-img" src="./resources/imgs/teste.jpg">
+            <img class="responsive-img" src="./resources/imgs/forest.jpg">
         </div>
     </div>
 
@@ -123,58 +126,64 @@
             <h2 class="white-text">
                 <b>Welcome to my WebSite</b>
             </h2>
-            <p class="flow-text white-text">My name is Lucas Manoel, web and mobile developer!
-                <br> I am learning how to be a Full stack Dev, focused on UX and security
+            <p class="flow-text white-text">My name is Lucas Manoel i like forests, skate, and computer art!
+                <br> I am learning how to be a Full stack Dev, focused on UX and security of web and mobile applications.
 
             </p>
             <a href="#about-me" class="fa fa-arrow-down white-text" style="font-size:40px"> </a>
         </div>
     </div>
-
     <div id="about-me" class="container scrollspy">
-        <div class="col s12 m4 white-text">
-            <div class="icon-block">
-                <h2 class="center white-text">
-                    <i class="fa fa-code"></i>
-                </h2>
-                <h5 class="center">Web and Mobile aplications Development</h5>
 
-                <p class="light flow-text center-align">
-                    I develop web aplications, and native apps using some frameworks, Development of systems to me is awesome
-                    <i class="fa fa-heart"></i>
-                </p>
-            </div>
-        </div>
         <div class="section">
             <!--   Icon Section   -->
             <div class="row  white-text">
-                <div class="col s12 m4 l4 offset-l2">
+                <div class="col s12 m4 l4">
                     <div class="icon-block">
                         <h2 class="center  white-text">
-                            <i class="fab fa-python"></i>
-                            <i class="fab fa-php"></i>
+                            <i class="fab fa-android"></i>
+                            <i class="fas fa-desktop"></i>
+                            <i class="fab fa-apple"></i>
                         </h2>
-                        <h5 class="center">Skills</h5>
+                        <h4 class="center">Web and mobile app development</h4>
                         <p class="light flow-text center-align">
-                            I like to work with Python, is my passion, i have been using him to work with data, games, and web Development! I develop
-                            in other languages,  web stuff like html  <i class="fab fa-html5"></i> , css <i class="fab fa-css3-alt"></i> , js <i class="fab fa-js"></i>. If i am not
-                            using python i like to use PHP too!
+                            I am a web and mobile app developer, i make web and responsive apps, natives and hybrids applications, always learning how
+                            to make awesome apps, for browsers, IOS's and android's systems!
                         </p>
                     </div>
                 </div>
-
                 <div class="col s12 m4">
                     <div class="icon-block">
                         <h2 class="center secondary-text-color">
                             <i class="fa fa-project-diagram"></i>
                         </h2>
-                        <h5 class="center">Analisys of systems</h5>
+                        <h4 class="center">Analisys of systems</h4>
                         <p class="light flow-text center-align">
-                            The most important not is to do, is how it is done, for this i am praticing and learning every day, how to be a good Analist
-                            using the software engineering, and frameworks that can  help me, like the modeling structures, detailed planning!
+                            The most important not is to do, is how it is done, for this i am practicing and learning every day, how to be a good analist
+                            using the software engineering, and frameworks that can help me, like the modeling structures,
+                            detailed planning!
                         </p>
                     </div>
                 </div>
+                <div class="col s12 m4 l4">
+                    <div class="icon-block">
+                        <h2 class="center  white-text">
+                            <i class="fab fa-node"></i>
+                            <i class="fab fa-python"></i>
+                            <i class="fab fa-php"></i>
+                        </h2>
+                        <h4 class="center">Skills</h4>
+                        <p class="light flow-text center-align">
+                            I like to work with Python, is my passion, i use it to work with data science, games, and web Development! I
+                            develop in other languages, web stuff like html
+                            <i class="fab fa-html5"></i> , css
+                            <i class="fab fa-css3-alt"></i> , js
+                            <i class="fab fa-js"></i>. If i am not using python i like to use PHP too and for mobile apps i am using node-js!
+                        </p>
+                    </div>
+                </div>
+
+
             </div>
 
         </div>
@@ -182,40 +191,58 @@
     <div class="parallax-container balign-wrapper" style="height: 60vh;">
         <div class="section no-pad-bot">
             <div class="container">
-                <div class="row white-text">
+                <div class="row white-text center-align">
+                    <h3>COFFEE IS LOVE</h3>
                 </div>
             </div>
         </div>
         <div class="parallax">
-            <img src="./resources/imgs/me.jpg" alt="Unsplashed background img 2">
+            <img src="./resources/imgs/nathan-dumlao-471723-unsplash.jpg" alt="Unsplashed background img 2" class="responsive-img">
         </div>
     </div>
-    
+
 
     <footer class="page-footer indigo darken-4">
-            <div class="container">
-              <div class="row">
+        <div class="container">
+            <div class="row">
                 <div class="col l6 s12">
-                  <h5 class="white-text center-align">Lucas Manoel</h5>
-                  <p class="grey-text text-lighten-4 center-align">If you want to know more about me, check at the links my jobs and part of my life!!!</p>
+                    <h4 class="white-text center-align">Lucas Manoel</h4>
+                    <p class="grey-text text-lighten-4 center-align">If you want to know more about me, check at the links my jobs and part of my life!!!</p>
                 </div>
                 <div class="col l4 offset-l2 s12 center-align">
-                  <h5 class="white-text">Links</h5>
-                  <ul>
-                    <li><a class="grey-text text-lighten-3" href="https://github.com/lucaslmmanoel" target="_blank">GitHub <i style="font-size:30px" class="fab fa-github"></i> </a></li>
-                    <li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/lucas-manoel-67bb8314b/" target="_blank"> LinkedIn  <i style="font-size:30px" class="fab fa-linkedin"></i> </a></li>
-                    <li><a class="grey-text text-lighten-3" href="https://www.instagram.com/worldpsych/" target="_blank">Instagram <i style="font-size:30px" class="fab fa-instagram"></i> </a></li>
-                    <li><a class="grey-text text-lighten-3" href="https://twitter.com/lucaslmmanoel" target="_blank"> Twitter <i style="font-size:30px" class="fab fa-twitter"></i> </a></li>
-                  </ul>
+                    <h4 class="white-text">Links</h4>
+                    <ul>
+                        <li>
+                            <a class="grey-text text-lighten-3" href="https://github.com/lucaslmmanoel" target="_blank">GitHub
+                                <i style="font-size:30px" class="fab fa-github"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/lucas-manoel-67bb8314b/" target="_blank">
+                            LinkedIn
+                                <i style="font-size:30px" class="fab fa-linkedin"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="grey-text text-lighten-3" href="https://www.instagram.com/worldpsych/" target="_blank">Instagram
+                                <i style="font-size:30px" class="fab fa-instagram"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="grey-text text-lighten-3" href="https://twitter.com/lucaslmmanoel" target="_blank"> Twitter
+                                <i style="font-size:30px" class="fab fa-twitter"></i>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
-              </div>
             </div>
-            <div class="footer-copyright center-align">
-              <div class="container">
-              © 2018 Lucas Manoel
-              </div>
+        </div>
+        <div class="footer-copyright center-align">
+            <div class="container">
+                © 2018 Lucas Manoel
             </div>
-          </footer>
+        </div>
+    </footer>
     <!-- sccrollspy script -->
     <script>
         document.addEventListener('DOMContentLoaded', function () {
