--- a/index.html
+++ b/index.html
@@ -128,7 +128,6 @@
             </h2>
             <p class="flow-text white-text">My name is Lucas Manoel i like forests, skate, and computer art!
                 <br> I am learning how to be a Full stack Dev, focused on UX and security of web and mobile applications.
-
             </p>
             <a href="#about-me" class="fa fa-arrow-down white-text" style="font-size:40px"> </a>
         </div>
@@ -145,10 +144,11 @@
                             <i class="fas fa-desktop"></i>
                             <i class="fab fa-apple"></i>
                         </h2>
-                        <h4 class="center">Web and mobile app development</h4>
+                        <h4 class="center">App development</h4>
+                        <br>
                         <p class="light flow-text center-align">
-                            I am a web and mobile app developer, i make web and responsive apps, natives and hybrids applications, always learning how
-                            to make awesome apps, for browsers, IOS's and android's systems!
+                            I am a web and mobile app developer, i make web responsive apps, natives and hybrids applications, always learning how
+                            to make awesome apps using the user experience(UX) and security of applications, for browsers, IOS and android systems!
                         </p>
                     </div>
                 </div>
@@ -158,6 +158,7 @@
                             <i class="fa fa-project-diagram"></i>
                         </h2>
                         <h4 class="center">Analisys of systems</h4>
+                        <br>
                         <p class="light flow-text center-align">
                             The most important not is to do, is how it is done, for this i am practicing and learning every day, how to be a good analist
                             using the software engineering, and frameworks that can help me, like the modeling structures,
@@ -173,6 +174,7 @@
                             <i class="fab fa-php"></i>
                         </h2>
                         <h4 class="center">Skills</h4>
+                        <br>
                         <p class="light flow-text center-align">
                             I like to work with Python, is my passion, i use it to work with data science, games, and web Development! I
                             develop in other languages, web stuff like html
