--- a/index.html
+++ b/index.html
@@ -15,14 +15,9 @@
 
 
     <style>
-        .carousel .carousel-item {
-            width: 300px !important;
-            height: 200px;
-            margin-top: 0%;
-        }
 
         .parallax-container {
-            height: 30vh;
+            height: 50vh;
         }
     </style>
 
@@ -30,14 +25,14 @@
     <script src="./resources/js/rellax.min.js"></script>
 </head>
 
-<body style="background: #161616">
+<body style="background: #1f161f">
     <!-- start Navbar -->
     <div class="navbar-fixed">
         <nav>
-            <div class="nav-wrapper indigo darken-4">
+            <div class="nav-wrapper" style="background-image: linear-gradient(to right, #2515f0 0%, #2575fc 100%);">
                 <div class="container">
                     <a href="#!" class="brand-logo">Lucas M.</a>
-                    <a href="#" data-target="mobile-demo" class="sidenav-trigger">
+                    <a href="#" data-target="menu" class="sidenav-trigger">
                         <span class="fa fa-bars"></span>
                     </a>
                     <ul class="right hide-on-med-and-down">
@@ -59,17 +54,15 @@
                                 <span class="ion-social-github"></span>
                             </a>
                         </li>
-
                     </ul>
-
                 </div>
             </div>
         </nav>
     </div>
-    <ul class="sidenav" id="mobile-demo">
+    <ul class="sidenav" id="menu">
         <li>
             <div class="user-view">
-                <div class="background indigo darken-4">
+                <div class="background" style="background-image: linear-gradient(to right, #2515f0 0%, #2575fc 100%);">
                 </div>
                 <a href="#user">
                     <img class="circle" src="./resources/imgs/me.jpg">
@@ -117,7 +110,7 @@
     <!-- End navbar -->
     <div class="parallax-container" style="margin-top: 0%">
         <div class="parallax">
-            <img class="responsive-img" src="./resources/imgs/forest.jpg">
+            <img class="responsive-img" src="./resources/imgs/niklas-hamann-424201-unsplash.jpg">
         </div>
     </div>
 
@@ -126,8 +119,8 @@
             <h2 class="white-text">
                 <b>Welcome to my WebSite</b>
             </h2>
-            <p class="flow-text white-text">My name is Lucas Manoel i like forests, skate, and computer art!
-                <br> I am learning how to be a Full stack Dev, focused on UX and security of web and mobile applications.
+            <p class="flow-text white-text">My name is Lucas Manoel i like forests, skate, coffe and computer art!
+                <br> I am learning how to be a Full stack Dev, focused on UX and security of web applications.
             </p>
             <a href="#about-me" class="fa fa-arrow-down white-text" style="font-size:40px"> </a>
         </div>
@@ -147,8 +140,7 @@
                         <h4 class="center">App development</h4>
                         <br>
                         <p class="light flow-text center-align">
-                            I am a web and mobile app developer, i make web responsive apps, natives and hybrids applications, always learning how
-                            to make awesome apps using the user experience(UX) and security of applications, for browsers, IOS and android systems!
+                            I am  web app developer, focused on user experience and security of information!
                         </p>
                     </div>
                 </div>
@@ -157,12 +149,10 @@
                         <h2 class="center secondary-text-color">
                             <i class="fa fa-project-diagram"></i>
                         </h2>
-                        <h4 class="center">Analisys of systems</h4>
+                        <h4 class="center">Analisys of systems and Agile devlopment</h4>
                         <br>
                         <p class="light flow-text center-align">
-                            The most important not is to do, is how it is done, for this i am practicing and learning every day, how to be a good analist
-                            using the software engineering, and frameworks that can help me, like the modeling structures,
-                            detailed planning!
+                            Know how you should make softwares is awesome, learn ways to simplify and speed up the software development is essential!
                         </p>
                     </div>
                 </div>
@@ -176,11 +166,10 @@
                         <h4 class="center">Skills</h4>
                         <br>
                         <p class="light flow-text center-align">
-                            I like to work with Python, is my passion, i use it to work with data science, games, and web Development! I
-                            develop in other languages, web stuff like html
+                            I like web development is my passion, code languages like html
                             <i class="fab fa-html5"></i> , css
                             <i class="fab fa-css3-alt"></i> , js
-                            <i class="fab fa-js"></i>. If i am not using python i like to use PHP too and for mobile apps i am using node-js!
+                            <i class="fab fa-js"></i> and work with the internet is fantastic!
                         </p>
                     </div>
                 </div>
@@ -190,21 +179,23 @@
 
         </div>
     </div>
+    <div class="rellax">
+
+    </div>
+    
     <div class="parallax-container balign-wrapper" style="height: 60vh;">
         <div class="section no-pad-bot">
             <div class="container">
-                <div class="row white-text center-align">
-                    <h3>COFFEE IS LOVE</h3>
-                </div>
             </div>
         </div>
         <div class="parallax">
-            <img src="./resources/imgs/nathan-dumlao-471723-unsplash.jpg" alt="Unsplashed background img 2" class="responsive-img">
+            <img src="./resources/imgs/rawpixel-722814-unsplash.jpg" alt="Unsplashed background img 2" class="responsive-img">
         </div>
     </div>
+    <div>
+    </div>
 
-
-    <footer class="page-footer indigo darken-4">
+    <footer class="page-footer" style="background-image: linear-gradient(to right, #2515f0 0%, #2575fc 100%);">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
@@ -221,7 +212,7 @@
                         </li>
                         <li>
                             <a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/lucas-manoel-67bb8314b/" target="_blank">
-                            LinkedIn
+                                LinkedIn
                                 <i style="font-size:30px" class="fab fa-linkedin"></i>
                             </a>
                         </li>
@@ -239,7 +230,7 @@
                 </div>
             </div>
         </div>
-        <div class="footer-copyright center-align">
+        <div class="footer-copyright center-align" style="background: #1f161f">
             <div class="container">
                 © 2018 Lucas Manoel
             </div>
