--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <!-- End navbar -->
     <div class="parallax-container" style="margin-top: 0%">
         <div class="parallax">
-            <img class="responsive-img" src="./resources/imgs/niklas-hamann-424201-unsplash.jpg">
+            <img class="responsive-img" src="./resources/imgs/roman-averin-173797-unsplash.jpg">
         </div>
     </div>
 
@@ -189,7 +189,7 @@
             </div>
         </div>
         <div class="parallax">
-            <img src="./resources/imgs/rawpixel-722814-unsplash.jpg" alt="Unsplashed background img 2" class="responsive-img">
+            <img src="./resources/imgs/fishing.jpg" alt="Unsplashed background img 2" class="responsive-img">
         </div>
     </div>
     <div>
