--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a href="#" data-target="menu" class="sidenav-trigger">
                         <span class="fa fa-bars"></span>
                     </a>
-                    <ul class="right hide-on-med-and-down">
+                    <ul class="right sidenav-trigger show-on-large">
                         <li>
                             <a href="#about-me" class="waves-effect waves-light">About
                                 <i style="font-size:30px" class="fa fa-user"></i>
