--- a/index.html
+++ b/index.html
@@ -31,11 +31,15 @@
         <nav>
             <div class="nav-wrapper" style="background-image: linear-gradient(to right, #2515f0 0%, #2575fc 100%);">
                 <div class="container">
-                    <a href="#!" class="brand-logo">Lucas M.</a>
-                    <a href="#" data-target="menu" class="sidenav-trigger">
+                   
+                    <a href="#" style="font-size: 20px" data-target="menu" class="sidenav-trigger hide-on-large-only">
                         <span class="fa fa-bars"></span>
                     </a>
-                    <ul class="right sidenav-trigger show-on-large">
+                    <a href="#" style="font-size: 30px" data-target="menu" class="sidenav-trigger show-on-large hide-on-small-only">
+                        <span class="fa fa-bars"></span>
+                    </a>
+                    <a href="#!"  class="brand-logo">LM <i style="font-size: 60px" class="material-icons right">code</i></a>
+                    <ul class="right sidenav-trigger hide-on-med-and-down">
                         <li>
                             <a href="#about-me" class="waves-effect waves-light">About
                                 <i style="font-size:30px" class="fa fa-user"></i>
