--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <h2 class="center secondary-text-color">
                             <i class="fa fa-project-diagram"></i>
                         </h2>
-                        <h4 class="center">Analisys of systems and Agile devlopment</h4>
+                        <h4 class="center">Analisys of systems and Agile development</h4>
                         <br>
                         <p class="light flow-text center-align">
                             Know how you should make softwares is awesome, learn ways to simplify and speed up the software development is essential!
