--- a/merry-christmas.html
+++ b/merry-christmas.html
@@ -1,1 +1,22 @@
-work
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Lucas Manoel</title>
+    <!-- Conectando com o materialize css -->
+    <link rel="stylesheet" href="./resources/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="myStyle.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+        crossorigin="anonymous">
+  
+  
+  
+     <!-- Conectando com o materialize js -->
+    <script src="./resources/js/materialize.min.js"></script>
+</body>
+
+</html>
