--- a/merry-christmas.html
+++ b/merry-christmas.html
@@ -249,7 +249,11 @@ body.welcome {
       </div>
     </div>
   </footer>
-      
+        <script>
+        $(document).ready(function(){
+            $('.modal-trigger').leanModal();
+        });
+        </script>
     <!-- Conectando com o materialize js -->
     <script src="./resources/js/materialize.min.js"></script>
 </body>
