--- a/merry-christmas.html
+++ b/merry-christmas.html
@@ -254,6 +254,10 @@ body.welcome {
             $('.modal-trigger').leanModal();
         });
         </script>
+        <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
     <!-- Conectando com o materialize js -->
     <script src="./resources/js/materialize.min.js"></script>
 </body>
