--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="grey-text text-lighten-3" href="https://www.instagram.com/worldpsych/" target="_blank">Instagram
+                            <a class="grey-text text-lighten-3" href="https://www.instagram.com/worldpsy.py/" target="_blank">Instagram
                                 <i style="font-size:30px" class="fab fa-instagram"></i>
                             </a>
                         </li>
