:arrow_up:  adicionando link para o medium

--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
                                 <span class="ion-social-github"></span>
                             </a>
                         </li>
+                        <li>
+                            <a href="https://medium.com/@lucaslmmanoel5" target="_blank" class="waves-effect waves-light">Medium
+                                <i style="font-size:30px" class="fab fa-medium"></i>
+                                <span class="ion-social-medium"></span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -109,6 +115,12 @@
                 <span class="ion-social-github"></span>
             </a>
         </li>
+        <li>
+            <a href="https://medium.com/@lucaslmmanoel5" target="_blank" class="waves-effect waves-light">Medium
+                <i style="font-size:30px" class="fab fa-medium"></i>
+                <span class="ion-social-medium"></span>
+            </a>
+        </li>
 
     </ul>
     <!-- End navbar -->
@@ -124,7 +136,7 @@
                 <b>Welcome to my WebSite</b>
             </h2>
             <p class="flow-text white-text">My name is Lucas Manoel i like forests, skate, coffe and computer art!
-                <br> I am learning how to be a Full stack Dev, focused on UX and security of web applications.
+                <br> I am a analist developer focused and UX, Devops and Agile!
             </p>
             <a href="#about-me" class="fa fa-arrow-down white-text" style="font-size:40px"> </a>
         </div>
@@ -144,7 +156,10 @@
                         <h4 class="center">App development</h4>
                         <br>
                         <p class="light flow-text center-align">
-                            I am  web app developer, focused on user experience and security of information!
+                            I am  web app developer,
+                            focused on user experience,
+                            always trying to satisfy users,
+                            creating solutions that will help them!
                         </p>
                     </div>
                 </div>
@@ -153,10 +168,13 @@
                         <h2 class="center secondary-text-color">
                             <i class="fa fa-project-diagram"></i>
                         </h2>
-                        <h4 class="center">Analisys of systems and Agile development</h4>
+                        <h4 class="center">
+                        Analisys of systems and Agile development
+                        </h4>
                         <br>
                         <p class="light flow-text center-align">
-                            Know how you should make softwares is awesome, learn ways to simplify and speed up the software development is essential!
+                            Know how you should make softwares is awesome,
+                            learn ways to simplify and speed up the software development is essential!
                         </p>
                     </div>
                 </div>
@@ -165,7 +183,6 @@
                         <h2 class="center  white-text">
                             <i class="fab fa-node"></i>
                             <i class="fab fa-python"></i>
-                            <i class="fab fa-php"></i>
                         </h2>
                         <h4 class="center">Skills</h4>
                         <br>
