:arrow_up: :art:

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </a>
                 <a href="#email">
                     <span class="email white-text">
-                        <span class="fa fa-phone"></span> +55 (61) 9 9614-2426</span>
+                        <span class="fa fa-phone"></span> +55 (61) 9 8339-4739</span>
                 </a>
             </div>
         </li>
@@ -135,8 +135,11 @@
             <h2 class="white-text">
                 <b>Welcome to my WebSite</b>
             </h2>
-            <p class="flow-text white-text">My name is Lucas Manoel i like forests, skate, coffe and computer art!
-                <br> I am a analist developer focused and UX, Devops and Agile!
+            <p class="flow-text white-text">My name is Lucas Manoel i like florests, plants, skate, psytrance, coffe and computer art!
+                <br> I am a analist developer focused and UX, Devops and Agile Development, actualy i'm working with development of dashboards, chatbots and web things,
+                using docker and kubernetes to make integrations more faster!
+                
+                <br> I like to create music in my free time, or improove my garden!
             </p>
             <a href="#about-me" class="fa fa-arrow-down white-text" style="font-size:40px"> </a>
         </div>
@@ -200,10 +203,6 @@
 
         </div>
     </div>
-    <div class="rellax">
-
-    </div>
-    
     <div class="parallax-container balign-wrapper" style="height: 60vh;">
         <div class="section no-pad-bot">
             <div class="container">
@@ -274,13 +273,6 @@
             });
         });
     </script>
-    <!-- rellax.js script -->
-    <script>
-        var rellax = new Rellax('.rellax', {
-            callback: function (position) {
-                console.log(position);
-            }
-        });
     </script>
     <!-- Parallax js -->
     <script>
